Train all 12 EC stations with 2000 epochs
- Updated training configuration to epochs=2000, patience=1000
- Retrained all 12 EC stations with extended training
- Updated models: CVP_INTAKE_EC, MIDR_INTAKE_EC, OLDR_CCF_EC, ROLD024_EC, RSAC054_EC, RSAC081_EC, RSAC092_EC, RSAN007_EC, RSAN018_EC, SLMZU003_EC, SLMZU011_EC, VICT_INTAKE_EC
- Updated all_stations_results.csv with new metrics

--- a/train_EC.ipynb
+++ b/train_EC.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,24 +89,189 @@
       "Loading datasets...\n",
       "\n",
       "================================================================================\n",
-      "TRAINING STATION 1/1: RSAC092_EC\n",
+      "TRAINING STATION 1/12: CVP_INTAKE_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "CVP_INTAKE_EC Results:\n",
+      "  Train - RMSE: 29.98, R²: 0.9670\n",
+      "  Val   - RMSE: 30.34, R²: 0.9665\n",
+      "  Test  - RMSE: 47.07, R²: 0.9004\n",
+      "INFO:tensorflow:Assets written to: ./Export/CVP_INTAKE_EC\\assets\n",
+      "Model saved at location: ./Export/CVP_INTAKE_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/CVP_INTAKE_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/CVP_INTAKE_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 2/12: MIDR_INTAKE_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "MIDR_INTAKE_EC Results:\n",
+      "  Train - RMSE: 23.39, R²: 0.9604\n",
+      "  Val   - RMSE: 23.98, R²: 0.9591\n",
+      "  Test  - RMSE: 33.79, R²: 0.9092\n",
+      "INFO:tensorflow:Assets written to: ./Export/MIDR_INTAKE_EC\\assets\n",
+      "Model saved at location: ./Export/MIDR_INTAKE_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/MIDR_INTAKE_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/MIDR_INTAKE_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 3/12: OLDR_CCF_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "OLDR_CCF_EC Results:\n",
+      "  Train - RMSE: 32.64, R²: 0.9640\n",
+      "  Val   - RMSE: 33.60, R²: 0.9621\n",
+      "  Test  - RMSE: 49.05, R²: 0.9038\n",
+      "INFO:tensorflow:Assets written to: ./Export/OLDR_CCF_EC\\assets\n",
+      "Model saved at location: ./Export/OLDR_CCF_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/OLDR_CCF_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/OLDR_CCF_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 4/12: ROLD024_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "ROLD024_EC Results:\n",
+      "  Train - RMSE: 25.22, R²: 0.9887\n",
+      "  Val   - RMSE: 25.87, R²: 0.9880\n",
+      "  Test  - RMSE: 42.57, R²: 0.9712\n",
+      "INFO:tensorflow:Assets written to: ./Export/ROLD024_EC\\assets\n",
+      "Model saved at location: ./Export/ROLD024_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/ROLD024_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/ROLD024_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 5/12: RSAC054_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "RSAC054_EC Results:\n",
+      "  Train - RMSE: 389.01, R²: 0.9975\n",
+      "  Val   - RMSE: 401.60, R²: 0.9974\n",
+      "  Test  - RMSE: 660.23, R²: 0.9918\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAC054_EC\\assets\n",
+      "Model saved at location: ./Export/RSAC054_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAC054_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/RSAC054_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 6/12: RSAC081_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "RSAC081_EC Results:\n",
+      "  Train - RMSE: 255.54, R²: 0.9938\n",
+      "  Val   - RMSE: 263.25, R²: 0.9934\n",
+      "  Test  - RMSE: 395.22, R²: 0.9891\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAC081_EC\\assets\n",
+      "Model saved at location: ./Export/RSAC081_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAC081_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/RSAC081_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 7/12: RSAC092_EC\n",
       "================================================================================\n",
       "Train: 65955, Val: 16422, Test: 18276\n",
       "\n",
       "RSAC092_EC Results:\n",
-      "  Train - RMSE: 93.32, R²: 0.9890\n",
-      "  Val   - RMSE: 99.42, R²: 0.9873\n",
-      "  Test  - RMSE: 208.91, R²: 0.9666\n",
+      "  Train - RMSE: 97.48, R²: 0.9880\n",
+      "  Val   - RMSE: 103.02, R²: 0.9864\n",
+      "  Test  - RMSE: 189.85, R²: 0.9724\n",
       "INFO:tensorflow:Assets written to: ./Export/RSAC092_EC\\assets\n",
       "Model saved at location: ./Export/RSAC092_EC\n",
       "INFO:tensorflow:Assets written to: ./Export/RSAC092_EC\\inference_model\\assets\n",
       "  Model saved to: ./Export/RSAC092_EC\n",
       "\n",
       "================================================================================\n",
+      "TRAINING STATION 8/12: RSAN007_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "RSAN007_EC Results:\n",
+      "  Train - RMSE: 178.60, R²: 0.9916\n",
+      "  Val   - RMSE: 184.60, R²: 0.9910\n",
+      "  Test  - RMSE: 314.29, R²: 0.9808\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAN007_EC\\assets\n",
+      "Model saved at location: ./Export/RSAN007_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAN007_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/RSAN007_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 9/12: RSAN018_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "RSAN018_EC Results:\n",
+      "  Train - RMSE: 67.73, R²: 0.9888\n",
+      "  Val   - RMSE: 69.86, R²: 0.9881\n",
+      "  Test  - RMSE: 130.55, R²: 0.9653\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAN018_EC\\assets\n",
+      "Model saved at location: ./Export/RSAN018_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/RSAN018_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/RSAN018_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 10/12: SLMZU003_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "SLMZU003_EC Results:\n",
+      "  Train - RMSE: 294.88, R²: 0.9971\n",
+      "  Val   - RMSE: 306.51, R²: 0.9969\n",
+      "  Test  - RMSE: 408.35, R²: 0.9949\n",
+      "INFO:tensorflow:Assets written to: ./Export/SLMZU003_EC\\assets\n",
+      "Model saved at location: ./Export/SLMZU003_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/SLMZU003_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/SLMZU003_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 11/12: SLMZU011_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "SLMZU011_EC Results:\n",
+      "  Train - RMSE: 284.54, R²: 0.9961\n",
+      "  Val   - RMSE: 293.65, R²: 0.9958\n",
+      "  Test  - RMSE: 428.48, R²: 0.9929\n",
+      "INFO:tensorflow:Assets written to: ./Export/SLMZU011_EC\\assets\n",
+      "Model saved at location: ./Export/SLMZU011_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/SLMZU011_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/SLMZU011_EC\n",
+      "\n",
+      "================================================================================\n",
+      "TRAINING STATION 12/12: VICT_INTAKE_EC\n",
+      "================================================================================\n",
+      "Train: 65955, Val: 16422, Test: 18276\n",
+      "\n",
+      "VICT_INTAKE_EC Results:\n",
+      "  Train - RMSE: 24.68, R²: 0.9614\n",
+      "  Val   - RMSE: 25.73, R²: 0.9588\n",
+      "  Test  - RMSE: 39.08, R²: 0.8893\n",
+      "INFO:tensorflow:Assets written to: ./Export/VICT_INTAKE_EC\\assets\n",
+      "Model saved at location: ./Export/VICT_INTAKE_EC\n",
+      "INFO:tensorflow:Assets written to: ./Export/VICT_INTAKE_EC\\inference_model\\assets\n",
+      "  Model saved to: ./Export/VICT_INTAKE_EC\n",
+      "\n",
+      "================================================================================\n",
       "SUMMARY OF ALL STATIONS\n",
       "================================================================================\n",
-      "    Station  Train_R2    Val_R2   Test_R2  Train_RMSE   Val_RMSE   Test_RMSE\n",
-      " RSAC092_EC   0.98902  0.987325  0.966624   93.318543  99.415744  208.907676\n",
+      "        Station  Train_R2    Val_R2   Test_R2  Train_RMSE    Val_RMSE   Test_RMSE\n",
+      "  CVP_INTAKE_EC  0.966966  0.966546  0.900438   29.977984   30.338400   47.067217\n",
+      " MIDR_INTAKE_EC  0.960445  0.959060  0.909182   23.387318   23.982192   33.790288\n",
+      "    OLDR_CCF_EC  0.963952  0.962067  0.903793   32.638156   33.598385   49.052493\n",
+      "     ROLD024_EC  0.988660  0.987999  0.971249   25.224201   25.869798   42.572450\n",
+      "     RSAC054_EC  0.997531  0.997376  0.991816  389.006768  401.595048  660.232314\n",
+      "     RSAC081_EC  0.993837  0.993424  0.989066  255.543450  263.252994  395.219061\n",
+      "     RSAC092_EC  0.988019  0.986389  0.972437   97.478029  103.017951  189.846497\n",
+      "     RSAN007_EC  0.991644  0.991018  0.980849  178.600690  184.602448  314.289752\n",
+      "     RSAN018_EC  0.988816  0.988082  0.965263   67.731824   69.858672  130.549274\n",
+      "    SLMZU003_EC  0.997101  0.996880  0.994898  294.883012  306.510094  408.345013\n",
+      "    SLMZU011_EC  0.996072  0.995848  0.992922  284.544450  293.649402  428.475480\n",
+      " VICT_INTAKE_EC  0.961374  0.958761  0.889264   24.680992   25.726147   39.076063\n",
       "\n",
       "✓ Full results saved to: Export/all_stations_results.csv\n",
       "  Columns: ['Station', 'Train_Samples', 'Val_Samples', 'Test_Samples', 'Train_RMSE', 'Train_R2', 'Val_RMSE', 'Val_R2', 'Test_RMSE', 'Test_R2', 'y_train_min', 'y_train_max', 'y_test_min', 'y_test_max']\n"
@@ -129,15 +294,11 @@
     "# Settings\n",
     "# ------------------------------------------------------------\n",
     "predictors = [\"dcc\", \"exports\", \"sac\", \"sjr\", \"tide\", \"net_dcd\", \"smscg\"]\n",
-    "'''\n",
+    "\n",
     "target_stations = [\n",
     "    \"CVP_INTAKE_EC\", \"MIDR_INTAKE_EC\", \"OLDR_CCF_EC\", \"ROLD024_EC\",\n",
     "    \"RSAC054_EC\", \"RSAC081_EC\", \"RSAC092_EC\", \"RSAN007_EC\",\n",
     "    \"RSAN018_EC\", \"SLMZU003_EC\", \"SLMZU011_EC\", \"VICT_INTAKE_EC\"\n",
-    "]\n",
-    "'''\n",
-    "target_stations = [\n",
-    "    \"RSAC092_EC\"\n",
     "]\n",
     "\n",
     "dataset_files = [\n",
@@ -256,7 +417,7 @@
     "        model, tensorboard_cb,\n",
     "        X_train, y_train_scaled,\n",
     "        X_val, y_val_scaled,\n",
-    "        epochs=1000, patience=1000, batch_size=128  # Set to 50 for testing, increase to 1000+ for production\n",
+    "        epochs=2000, patience=1000, batch_size=128  # Set to 50 for testing, increase to 1000+ for production\n",
     "    )\n",
     "    \n",
     "    # Create inference model and evaluate\n",
